<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_introduction">Quiz Introduction</string>
    <string name="quiz_description">This quiz is to test some basic knowledge of bringing up a baby.</string>
    <string name="personal_info">Login Personal Info</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_country">Your Country</string>
    <string name="your_role">Your Role</string>
    <string name="role_1">Mama</string>
    <string name="role_2">Baba</string>
    <string name="quiz_list">Quiz List</string>
    <string name="question_1">Which one is best for a 3-month infant as main food?(25\')</string>
    <string name="question_1_option_1">Breast Milk</string>
    <string name="question_1_option_2">Milk</string>
    <string name="question_1_option_3">Rice</string>
    <string name="question_1_option_4">Fruit</string>
    <string name="question_1_answer">The right answer is Breast Milk!</string>
    <string name="question_2">Which is good for 6-month infant as food supplement?(25\')</string>
    <string name="question_2_option_1">Rice Flour</string>
    <string name="question_2_option_2">Beef Mud</string>
    <string name="question_2_option_3">Fried Chicken</string>
    <string name="question_2_answer">The right answer Rice Flour and Beef Mud!</string>
    <string name="question_3">What age of infant should be weaned?(25\')</string>
    <string name="question_3_option_1">6 Month</string>
    <string name="question_3_option_2">9 Month</string>
    <string name="question_3_option_3">12 Month</string>
    <string name="question_3_answer">The right answer is 12 month!</string>
    <string name="question_4">Please share your idea of having and bringing up a baby!(25\')</string>
    <string name="question_4_hint">Like how you feel when baby is born and your valuable experience of baby sitting, etc.</string>
    <string name="submit">Submit</string>
    <string name="score_hint">Please submit to check</string>
    <string name="review">Review</string>
    <string name="toast_question_1_no_answer">Please make your choice for Q1!</string>
    <string name="toast_question_2_no_answer">Please make your choice for Q2!</string>
    <string name="toast_question_3_no_answer">Please make your choice for Q3!</string>
    <string name="toast_question_4_no_answer">Please share your ideas for Q4!</string>
    <string name="toast_info_no_answer">Please complete your personal info!</string>
    <string name="final_score">Your Final Score is: </string>
</resources>
