<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_introduction"
                style="@style/Header"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info"
                style="@style/Header"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:hint="@string/hint_name"
                        style="@style/PersonalInfo"
                        android:id="@+id/info_name"/>
                    <EditText
                        android:hint="@string/hint_country"
                        style="@style/PersonalInfo"
                        android:id="@+id/info_country"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_role"
                        android:paddingLeft="8dp"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:text="@string/role_1"
                            style="@style/PersonalInfo"
                            android:id="@+id/info_role_1"/>
                        <RadioButton
                            style="@style/PersonalInfo"
                            android:text="@string/role_2"
                            android:id="@+id/info_role_2"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_list"
                style="@style/Header"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/quiz_1">
                        <TextView
                            style="@style/questionTitle"
                            android:text="@string/question_1"/>
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1.1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_1_option_1"
                                android:id="@+id/question_1_option_1"
                                style="@style/options"/>
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_1_option_2"
                                android:id="@+id/question_1_option_2"
                                style="@style/options"/>
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_1_option_3"
                                android:id="@+id/question_1_option_3"
                                style="@style/options"/>
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_1_option_4"
                                android:id="@+id/question_1_option_4"
                                style="@style/options"/>
                        </RadioGroup>
                        <TextView
                            android:id="@+id/answer_question_1"
                            style="@style/rightAnswer"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/quiz_2">
                        <TextView
                            style="@style/questionTitle"
                            android:text="@string/question_2"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_1"
                            android:id="@+id/question_2_option_1"
                            style="@style/options"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_2"
                            android:id="@+id/question_2_option_2"
                            style="@style/options"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/question_2_option_3"
                            android:id="@+id/question_2_option_3"
                            style="@style/options"/>
                        <TextView
                            android:id="@+id/answer_question_2"
                            style="@style/rightAnswer"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/quiz_3">
                        <TextView
                            style="@style/questionTitle"
                            android:text="@string/question_3"/>
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_3_option_1"
                                android:id="@+id/question_3_option_1"
                                style="@style/options"/>
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_3_option_2"
                                android:id="@+id/question_3_option_2"
                                style="@style/options"/>
                            <RadioButton
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/question_3_option_3"
                                android:id="@+id/question_3_option_3"
                                style="@style/options"/>
                        </RadioGroup>
                        <TextView
                            style="@style/rightAnswer"
                            android:id="@+id/answer_question_3"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/quiz_4">
                        <TextView
                            style="@style/questionTitle"
                            android:text="@string/question_4"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/question_4_hint"
                            android:id="@+id/question_4"
                            android:textSize="12sp"
                            android:textStyle="italic"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="checkScore"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/displayScore"
                android:text="@string/score_hint"
                android:padding="8dp"
                android:textAlignment="center"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:onClick="scoreReview"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>



